--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-firebase/app": "^21.6.2",
     "@react-native-firebase/auth": "^21.6.2",
     "@react-native-google-signin/google-signin": "^13.1.0",
@@ -23,10 +24,12 @@
     "expo-image-picker": "^16.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
+    "react-dom": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
+    "react-native-web": "^0.19.13",
     "twrnc": "^4.6.0",
     "zustand": "^5.0.3"
   },
