--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "twrnc": "^4.6.0",
     "zustand": "^5.0.3"
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
