--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "expo": "~52.0.24",
     "expo-dev-client": "~5.0.8",
     "expo-image-picker": "^16.0.3",
+    "expo-navigation-bar": "~4.0.7",
     "expo-status-bar": "~2.0.0",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.5",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "twrnc": "^4.6.0",
