--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "expo": "~52.0.24",
     "expo-dev-client": "~5.0.8",
     "expo-image-picker": "^16.0.3",
+    "expo-linear-gradient": "^14.0.2",
     "expo-navigation-bar": "~4.0.7",
+    "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
     "npm": "^11.0.0",
