--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,6 +21,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+android.kotlinVersion=1.9.25
 
 # Enable AAPT2 PNG crunching
 android.enablePngCrunchInReleaseBuilds=true
