--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.7.9",
     "expo": "~52.0.24",
+    "expo-asset": "^11.0.4",
     "expo-dev-client": "~5.0.8",
+    "expo-font": "^13.0.4",
     "expo-image-picker": "^16.0.3",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-modules-core": "2.1.2",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.0",
@@ -31,6 +34,8 @@
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "^15.10.1",
