--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-modules-core": "2.1.2",
     "expo-navigation-bar": "~4.0.7",
+    "expo-notifications": "~0.29.13",
     "expo-router": "^4.0.17",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
     "npm": "^11.0.0",
@@ -38,10 +40,12 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
+    "react-native-shared-element": "^0.8.9",
     "react-native-svg": "^15.10.1",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
+    "react-navigation-shared-element": "^3.1.3",
     "twrnc": "^4.6.0",
     "zustand": "^5.0.3"
   },
