--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@react-native-firebase/app": "^21.6.2",
     "@react-native-firebase/auth": "^21.6.2",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.2",
     "@ui-kitten/components": "^5.3.1",
     "axios": "^1.7.9",
     "expo": "~52.0.24",
@@ -26,7 +27,7 @@
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.2",
     "expo-modules-core": "2.1.2",
-    "expo-navigation-bar": "~4.0.7",
+    "expo-navigation-bar": "~4.0.8",
     "expo-notifications": "~0.29.13",
     "expo-router": "^4.0.17",
     "expo-secure-store": "^14.0.1",
@@ -38,6 +39,7 @@
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
     "react-native-shared-element": "^0.8.9",
@@ -46,6 +48,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-navigation-shared-element": "^3.1.3",
+    "sonner-native": "^0.17.0",
     "twrnc": "^4.6.0",
     "zustand": "^5.0.3"
   },
