--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~52.0.24",
     "expo-asset": "^11.0.4",
     "expo-dev-client": "~5.0.8",
+    "expo-dev-menu": "6.0.19",
     "expo-font": "^13.0.4",
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.2",
@@ -39,10 +40,11 @@
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.4.0",
-    "react-native-shared-element": "^0.8.9",
+    "react-native-shared-element": "^0.9.0-rc0",
     "react-native-svg": "^15.10.1",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-vector-icons": "^10.2.0",
