splash screen and app icon added

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,7 +21,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
   }
 }
 
-rootProject.name = 'webby'
+rootProject.name = 'Webby'
 
 dependencyResolutionManagement {
   versionCatalogs {
