--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
+    "lottie-react-native": "7.1.0",
     "npm": "^11.0.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
